src/components/main-page/main.module.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* {
    overflow: hidden;
} */
/* NEVER APPLY to * UNLESS YOU ABSOLUTELY WANT TO APPLY THIS STYLE TO EVERYTHING */

.mainNavDiv {
    position: sticky;
    top: 0;
    z-index: 10;
    width: 100%;
}

/* temporary -- should be dynamic */
.mainBody {
    overflow: scroll;
    height: 100vh;
    /* background-image: linear-gradient(180deg, #00C2FF 0%, rgba(7, 38, 66, 0) 100%); */
    background-color: #17A4D0;
}

.rectangle-line {
    flex: 1;
    text-align: center;
    border-bottom: 1px solid #ccc;
    /* Optional: Add a border between lines */
}

.rectangle-line:last-child {
    border-bottom: none;
    /* Remove the border for the last line */
}

/* default text style */
.textStyle {
    /* z-index: 99; */
    font-weight: 500;
    color: rgb(0, 0, 0);
    text-decoration: none;
    font-family: Montserrat;
    font-size: 16px;
}

.dropShadow {
    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
}

.contentBody {
    max-width: 1000px;
    width: 100%;
    margin: auto;
}

.card {
    background-color: white;
    border-radius: 8px;
    margin: 4px;
    box-shadow: rgba(0, 0, 0, 25%) 0px 8px 8px;
    position: relative;
}

.today {
    margin-top: 60px;
    margin-bottom: 30px;
    display: flex;
    flex-direction: row;
    height: 500px;
}

.leftCard {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.mainInfo {
    /* background-color: white; */
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    /* position: relative; */
}

.detailedInfo {
    display: flex;
    height: 200px;
}

.hourlyForecast {
    width: 300px;
}

.tenDayForecast {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 60px;
    height: 500px;
}

.lineContainer {
    margin-left: 30px;
}

.margin {
    margin: 45px;
}

.overlayText {
    position: absolute;
    padding: 36px 48px;
    /* width: 100%; */
    /* height: 100%; */
    color: white;
    text-decoration: none;
    text-shadow: rgba(0, 0, 0, 25%) 0px 8px 8px;
}

#todayHighLow{
    position: relative;
    font-family: Montserrat, sans-serif;
    font-weight: 500;
    font-size: 1em;
    left: 0.5rem;
}

#currentTemp{
    top: -1rem;
    position: relative;
    font-family: Raleway, sans-serif;
    font-weight: 600;
    font-size: 4.5em;
}

#currentLocation{
    position: relative;
    font-family: Raleway, sans-serif;
    font-weight: medium;
    font-size: 2em;
    top: -0.5em;
    left: -0.6rem;
}

